feat(form): static form

--- a/public/static/forms.html
+++ b/public/static/forms.html
@@ -182,7 +182,8 @@
                       class="plasmic_default__all plasmic_default__div Contact__column___0AM6R"
                     >
                       <form
-                        action="/#form-submitted"
+                        accept-charset="utf-8"
+                        action="/contact-submitted"
                         aria-describedby=""
                         class="plasmic_default__all plasmic_default__form root_reset_afpau8wXKNTv83inxrqmKN plasmic_default_styles plasmic_mixins plasmic_tokens ContactForm__contactForm__fiYpR __wab_instance Contact__contactForm___7IPs7"
                         data-netlify="true"
